[package]
name = "erl_dist"
version = "0.6.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Rust Implementation of Erlang Distribution Protocol"
homepage = "https://github.com/sile/erl_dist"
repository = "https://github.com/sile/erl_dist"
readme = "README.md"
keywords = ["erlang"]
license = "MIT"
edition = "2021"

[badges]
coveralls = {repository = "sile/erl_dist"}

[dependencies]
bitflags = "1"
byteorder = "1"
eetf = "0.8"
futures = "0.3"
md5 = "0.7"
rand = "0.9"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
serde_json = "1"
smol = "1"
