[package]
name = "erl_dist"
version = "0.6.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Rust Implementation of Erlang Distribution Protocol"
homepage = "https://github.com/sile/erl_dist"
repository = "https://github.com/sile/erl_dist"
readme = "README.md"
keywords = ["erlang"]
license = "MIT"
edition = "2021"

[dependencies]
bitflags = "2"
byteorder = "1"
eetf = "0.9"
futures = "0.3"
md5 = "0.7"
rand = "0.9"

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
smol = "2"
