[package]
name = "erl_dist"
version = "0.8.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Rust Implementation of Erlang Distribution Protocol"
homepage = "https://github.com/sile/erl_dist"
repository = "https://github.com/sile/erl_dist"
readme = "README.md"
keywords = ["erlang"]
license = "MIT"
edition = "2024"

[dependencies]
eetf = "0.11"
futures = "0.3"
md5 = "0.8"
rand = "0.10"

[dev-dependencies]
noargs = "0.4.1"
nojson = "0.3"
smol = "2"
